# matlabCode

MATLAB/: ARsequence.m  AlingeComp.m  BasicCausalTesting.m  BasicRegression.m  BirthdayRelated.m  BootICtest.m  ButterFilter.m  CInd_test_new_withGPm.m~  CInd_test_new_withGPnb.m  CInd_test_new_withGPnb.m~  CSD2lfp.m  CSD2lfp.m~  CableICAmodel.m  CableICAmodel.m~  CausalICsG.m  CausalICsNISWS.m  CausalICsNISWS.m~  CausalKenji.m  CausalKenji.m~  CausaldraftG.m  CausaldraftG.m~  CausaldraftNIsleep.m  CausaldraftNIsleep.m~  CausaldraftNIsleep2.m  CausaldraftNIsleep2.m~  CausaldraftSM.m  CausaldraftSM.m~  CellMean.m  CheckICs.m  CheckLFP.m  CheckLFP.m~  CheckResInStatesNI.m  CheckSimulationCausal.m  CheckSimulationCausal.m~  ClustICbasic.m  ClustICbasic.m~  ClusterComp.m  ClusterComp.m~  ClusterCompO.m  ClusterCompO.m~  (+293 more)
MATLAB/lab/DataBrowse/: AdDisplaydData.m  BrowseMove.m  DisplayData.m  KeyBrowse.m  MouseBrowse.m  PlotPoints.m  Pointer.m  TimeBrowse.m
MATLAB/lab/General/: ANuPlaceField.m  APlaceField.m  ARSpec.m  AllAxis.m  BarMatrix.m  BrowseCSD.m  BrowseCSD2.m  BrowseCSD2F.m  BrowseCSDf.m  CCGlite.m  CloserThen.m  ClustersPlot.m  ColorScatter3.m  ContourMatrix.m  Csd2CoherenceNorm.m  CurSrcDns.m  CurSrcDnsFile.m  CurSrcDnsOld.m  DirectProd.m  DisplaySYNC.m  EEGExtract.m  ErrorBarMatrix.m  FixEegChannels.m  ForAllFig.m  ForAllObjects.m  FreeMemory.m  HistMatrix.m  ISILog.m  ImageMatrix.m  KlustaSist.m  KlustaSistData.m  KlusterItAll.m  LetterM.map  LetterN.map  LoadPar.m  LoadParNori.m  LoadParOld.m  LocalMaxima.m  LocalMinima.m.old  LocalMinimaK.m  (+126 more)
MATLAB/lab/Spielwiese/: #PrintIt.m#  #SpectInt.m#  AlignSegmentTrials.m  AllThetaPrep.m  AvRate.m  AveActiv_Kamran.m  AveSWP.m  BabyAge2.m  Binning.m  BrowseCells.m  BrowseOneCells.m  Carandini.m  Ccgpval.m  CellTypes.m  CenterOfMass.m  CheckCluFetLength.m  CheckCluFetLength2.m  CheckFileLengths.m  CheckFileLengthsOne.m  CheckKlusters.m  CheckPCIN.m  CheckPFTrials.m  CheckTrials.m  CheckTrials_loop.m  CheckTrials_mouse.m  CompressIndx.m  ComputeList.m  ConcatEegWhl.m  (+352 more)
MATLAB/lab/Third-Party_Toolboxes/load5/: #load5.c#  .load5.c.swp  Makefile.am  Makefile.in  README  aclocal.m4  build_cygwin  build_linux  build_mingw  build_solaris  configure  configure.ac  mexFunction.map
MATLAB/lab/Third-Party_Toolboxes/load5/autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2
MATLAB/lab/Third-Party_Toolboxes/load5/binaries/: load5.mexa64  load5.mexglx
MATLAB/lab/Third-Party_Toolboxes/load5/build-vc7/libmexio/: libmexio.vcproj
MATLAB/lab/Third-Party_Toolboxes/load5/build-vc7/libmexio/Debug/: BuildLog.htm  libmexio.lib  vc70.idb
MATLAB/lab/Third-Party_Toolboxes/load5/build-vc7/libmexio/Release/: BuildLog.htm  libmexio.lib  vc70.idb
MATLAB/lab/Third-Party_Toolboxes/load5/build-vc7/libmexsys/: libmexsys.vcproj
MATLAB/lab/Third-Party_Toolboxes/load5/build-vc7/libmexsys/Debug/: BuildLog.htm  libmexsys.lib  vc70.idb
MATLAB/lab/Third-Party_Toolboxes/load5/build-vc7/libmexsys/Release/: BuildLog.htm  libmexsys.lib  vc70.idb
MATLAB/lab/Third-Party_Toolboxes/load5/build-vc7/load5/: load5.def  load5.ncb  load5.sln  load5.vcproj
MATLAB/lab/Third-Party_Toolboxes/load5/build-vc7/load5/Release/: BuildLog.htm  load5.exp  load5.lib  vc70.idb
MATLAB/lab/Third-Party_Toolboxes/load5/config/: matlab.m4
MATLAB/lab/Third-Party_Toolboxes/load5/libmexio/: .mex.c.swo  Makefile.am  Makefile.in  mex.c  mexio.c  mexio.h
MATLAB/lab/Third-Party_Toolboxes/load5/libmexsys/: Makefile.am  Makefile.in  mem.c  mexstd.c  mexstd.h  string.c
(+4080 files in other folders)
